syntax = "proto3";

package user_service;

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

    rpc GetUserById(GetUserByIdRequest) returns (GetUserResponse);

    rpc GetUserContacts(GetUserContactsRequest) returns (GetUserContactsResponse);

    rpc AddContactToUser(AddContactRequest) returns (AddContactResponse);

    rpc RemoveContactFromUser(RemoveContactRequest) returns (RemoveContactResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string phone = 3;
}

message CreateUserResponse {
    UserMessage user = 1;
}

message GetUserByIdRequest {
    string userId = 1;
}

message GetUserResponse {
    UserMessage user = 1;
}

message GetUserContactsRequest {
    string userId = 1;
}

message GetUserContactsResponse {
    repeated ContactMessage contacts = 1;
}

message AddContactRequest {
    string userId = 1;
    string contactEmail = 2;
}

message AddContactResponse {
    UserMessage user = 1;
}

message RemoveContactRequest {
  string userId = 1;
  string contactEmail = 2;
}

message RemoveContactResponse {
    UserMessage user = 1;
}

message UserMessage {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}

message ContactMessage {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
}